--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "manage-courses",
+  "name": "formik-yup-mui-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "@mui/material": "^5.11.14",
+    "@mui/x-data-grid": "^6.0.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tremor/react": "^2.1.0",
+    "axios": "^1.3.4",
+    "eslint-plugin-react-hooks": "^5.0.0-next-9c54b29b4-20230322",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "tw-elements": "^1.0.0-beta2",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
